playground/playground-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: playground
  replicas: 1
  template: 
    metadata:
      labels:
        app: playground
    spec:
      containers:
      - name: playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
