playground/playground-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: default
  labels:
    app: playground
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:    
    app: playground
  type: NodePort
