playground/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: playground
  replicas: 1
  template: 
    metadata:
      labels:
        app: playground
    spec:
      containers:
      - name: playground
        image: wil42/playground:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: default
  labels:
    app: playground
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:    
    app: playground
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: playground.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: playground
              port:
                number: 80
