playground/playground-network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-playground
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomize-playground
            port:
              number: 8888
